# external-dns-opnsense

./: .env.example  .envrc  .gitignore  Cargo.toml  README.md  flake.nix  opnsense-api.md
src/: appstate.rs  cli.rs  data_structs.rs  error.rs  errors.rs  lib.rs  main.rs  responses.rs  test.rs
src/opnsense/: mod.rs
src/routes/: adjustendpoints.rs  error.rs  healthz.rs  mod.rs  records.rs  root.rs  webhook.rs
testing/: openapi.yaml  opnsense-api.md  project.md  records-post.json  records-post.yaml
tests/: main.rs
