[package]
name = "external_dns_opnsense"
version = "0.1.0"
edition = "2021"
authors = ["Richtman, Ariel"]
description = "Extension for Kubernetes external-dns operator to manage records in OPNsense"
documentation = "https://github.com/arichtman/external-dns-opnsense"
repository = "https://github.com/arichtman/external-dns-opnsense"
homepage = "https://github.com/arichtman/external-dns-opnsense"
readme = "README.md"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
axum-otel-metrics = "0.8.0"
log = "0.4.20"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
simple_logger = "4.3.3"
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
tower = "0.4.13"

[dependencies.clap]
version = "4.*"
features = ["derive", "env"]

[[bin]]
name = "edns"
path = "src/main.rs"
