[package]
name = "external_dns_opnsense"
version = "0.1.0"
edition = "2021"
authors = ["Richtman, Ariel"]
description = "Extension for Kubernetes external-dns operator to manage records in OPNsense"
documentation = "https://github.com/arichtman/external-dns-opnsense"
repository = "https://github.com/arichtman/external-dns-opnsense"
homepage = "https://github.com/arichtman/external-dns-opnsense"
readme = "README.md"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
axum-otel-metrics = "0.8.1"
reqwest = { version = "0.11.27", features = ["json"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dependencies.clap]
version = "4.*"
features = ["derive", "env"]

[[bin]]
name = "edns"
path = "src/main.rs"

[dev-dependencies]
hyper = { version = "1.3.1", features = ["full"] }
mockall = "0.12.1"
rstest = "0.18.2"
